# autohub

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  find_cmp.py  gen_token.py  yamap.csv
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  20260414_0001_autoservices_fields.py  20260415_1424_df4f2028e52f_initial.py
backend/app/: __init__.py  admin.py  cache.py  config.py  database.py  main.py  search.py  seed_autoservices.py  seed_content.py  seed_vehicles.py  storage.py  worker.py
backend/app/api/v1/: analytics.py  auth.py  bookings.py  catalog.py  chat.py  content.py  emergency.py  notifications.py  orders.py  partners.py  payments.py  reviews.py  router.py  search.py  users.py  vehicles.py
backend/app/core/: __init__.py  db.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  booking.py  catalog.py  chat.py  content.py  emergency.py  notification.py  order.py  partner.py  payment.py  review.py  user.py  vehicle.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  booking.py  catalog.py  chat.py  content.py  emergency.py  notification.py  order.py  partner.py  payment.py  review.py  search.py  user.py  vehicle.py
backend/app/services/: analytics.py  auth.py  booking.py  catalog.py  chat.py  content.py  emergency.py  notification.py  order.py  partner.py  payment.py  review.py  search.py  user.py  vehicle.py  vin.py
backend/app/tasks/: __init__.py  bookings.py  emergency.py  notifications.py  payments.py  reviews.py  search_index.py
backend/app/ws/: manager.py  routes.py
docs/: SYSTEM_ARCHITECTURE.md  WORK_PLAN.md
frontend/: Dockerfile  pyproject.toml  rxconfig.py
frontend/app/: api.py  app.py  state.py
frontend/app/components/: breadcrumbs.py  navbar.py  order_card.py  partner_card.py  star_rating.py
frontend/app/pages/: about.py  blog.py  blog_detail.py  booking.py  chat.py  contacts.py  emergency.py  favorites.py  garage.py  index.py  login.py  news.py  news_detail.py  orders.py  partner_detail.py  payment.py  profile.py  promo_detail.py  promos.py  register.py  search.py
frontend/app/pages/partner/: analytics.py  dashboard.py  orders.py  register.py  schedule.py  services.py
frontend/app/states/: auth.py  booking.py  chat.py  content.py  emergency.py  order.py  partner.py  review.py  search.py  user.py  vehicle.py
frontend/assets/styles/: global.css
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.prod.conf
