[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autohub-backend"
version = "0.1.0"
description = "Auto Hub — API Backend"
requires-python = ">=3.12"

dependencies = [
    # ── Web Framework ──────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # ── Validation ─────────────────────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",

    # ── Database — PostgreSQL ──────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # ── Cache — Redis ──────────────────────────────────────────────
    "redis[hiredis]>=5.0.0",

    # ── Task Queue — Celery ────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "celery-singleton>=0.3.1",

    # ── Search — Elasticsearch ─────────────────────────────────────
    "elasticsearch[async]>=8.14.0,<9.0.0",

    # ── Storage — S3/MinIO ─────────────────────────────────────────
    "aiobotocore>=2.13.0",
    "aiofiles>=24.1.0",

    # ── Auth / Security ────────────────────────────────────────────
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "itsdangerous>=2.2.0",

    # ── Logging ────────────────────────────────────────────────────
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",

    # ── OpenTelemetry (трассировка) ────────────────────────────────
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",

    # ── Admin Panel ────────────────────────────────────────────────
    "sqladmin>=0.18.0",

    # ── Utilities ──────────────────────────────────────────────────
    "python-slugify>=8.0.4",
    "pillow>=10.4.0",
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "babel>=2.16.0",
]

[project.optional-dependencies]
dev = [
    # Тестирование
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "faker>=28.0.0",

    # Линтинг и форматирование
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-passlib>=1.7.7",
    "types-python-dateutil>=2.9.0",
    "types-pytz>=2024.1",

    # Dev утилиты
    "pre-commit>=3.8.0",
    "ipython>=8.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "S",        # bandit (безопасность)
    "B",        # bugbear
    "A",        # builtins shadowing
    "C4",       # comprehensions
    "DTZ",      # datetime timezone
    "T20",      # print statements
    "RUF",      # ruff-specific
]
ignore = [
    "S101",   # assert (используется в тестах)
    "B008",   # FastAPI Depends() в сигнатуре
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"app/scripts/**" = ["T20"]
"alembic/**" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["tests.*", "alembic.*"]
ignore_errors = true

# ── Pytest ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── Coverage ───────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "app/scripts/*",
    "alembic/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
